--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.0.1"
   },
   "scripts": {
